# snowdrift

./: .buildinfo  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  search.js  searchindex.js  snowdrift.html  usage.html
.github/: dependabot.yml
.github/actions/: project-setup.yml
.github/actions/project-setup/: action.yml
.github/workflows/: ci-doc.yml  ci-pre.yml  ci-pub.yml  ci-test.yml  ci.yml  docs.yml  extra-checks.yml  pre-checks.yml  publish.yml  tests.yml
_sources/: index.rst.txt
_static/: documentation_options.js
dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
dev/_static/: documentation_options.js
docs/source/: conf.py  index.rst  usage.rst
docs/source/utils/: redirect.html
snowdrift/: breeze.html  breeze_cpp.html  cli.html  code_writer.html  common.html  config.html  core.html
snowdrift/breeze/: stub.html
snowdrift/breeze_cpp/: stub.html
snowdrift/cli/: main.html  stub.html
snowdrift/code_writer/: stub.html
snowdrift/common/: stub.html
snowdrift/config/: stub.html
snowdrift/core/: stub.html
src/snowdrift/: __init__.py
src/snowdrift/breeze/: __init__.py  stub.py
src/snowdrift/breeze_cpp/: __init__.py  stub.py
src/snowdrift/cli/: __init__.py  main.py  stub.py
src/snowdrift/code_writer/: __init__.py  stub.py
src/snowdrift/common/: __init__.py  stub.py
src/snowdrift/config/: __init__.py  stub.py
src/snowdrift/core/: __init__.py  stub.py
tests/: version_test.py
tests/breeze/: breeze_stub_test.py
tests/breeze_cpp/: breeze_cpp_stub_test.py
tests/cli/: cli_stub_test.py
tests/code_writer/: code_writer_stub_test.py
tests/common/: common_stub_test.py
tests/config/: config_stub_test.py
tests/core/: core_stub_test.py
tests/smoke/: version_test.py
tests/unit/breeze/: breeze_stub_test.py
tests/unit/breeze_cpp/: breeze_cpp_stub_test.py
tests/unit/code_writer/: code_writer_stub_test.py
tests/unit/common/: common_stub_test.py
tests/unit/config/: config_stub_test.py
tests/unit/core/: core_stub_test.py
