[project]
name = "snowdrift"
version = "0.1.0"
description = "Python package for generating optimized settings handlers (especially for HPC use) in C++ and other languages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
snowdrift = "snowdrift:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
