[project]
name = "snowdrift"
version = "0.1.0"
description = "Python package for generating optimized settings handlers (especially for HPC use) in C++ and other languages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
snowdrift = "snowdrift.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
addopts = "-ra -We"
